# franz_flow

./: .gitignore  CMakeLists.txt  bytes_utils.h  fixed_size_ring_buffer.h  index.h  main.c  main_rb.c  message_layout.h  record_descriptor.h  ring_buffer.h  ring_buffer_layout.h
include/: bytes_utils.h  fixed_size_ring_buffer.h  fixed_size_stream.h  fs_rb.h  fs_stream.h  vs_rb.h
src/: bytes_utils.c  fixed_size_ring_buffer.c  fixed_size_stream.c  fs_rb.c  fs_stream.c  vs_rb.c
test/: main_ff_spsc.c  main_fixed_size_rb.c  main_fs_allocation.c  main_fs_rb_allocation.c  main_rb.c  main_stream.c  shared_rb_read.c  shared_rb_write.c
